objects/Contact_Ebsta_Score__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <formula>IF( User__c == Contact__r.Owner.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Ebsta Scores</relationshipLabel>
        <relationshipName>Contact_Ebsta_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Ebsta_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Ebsta Score</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Contact Ebsta Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Ebsta Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>